# fast_model_db

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  user.py  users.py
.devcontainer/: .env.org  Dockerfile  devcontainer.json  docker-compose.yml
db/: user.sql  users.sql
fast_model_db/: main.py
frontend/: next.config.js  package-lock.json  package.json
frontend/pages/: index.tsx
migrations/versions/: 4a81f6d30f77_modify_table_name.py  7e7a5ce8c223_init.py
